# Nuked-SC55

./: .gitignore  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README-noodnik2.md  README.md
.github/workflows/: build.yml
cmake/: Findrtmidi.cmake  TargetWarnings.cmake
doc/: renderer_frontend.md  standard_frontend.md
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
include/nuked-sc55/: nuked-sc55.h
scripts/: compress.sh  create-m4a-album.sh  mid2wav.sh  render-list.sh  wav2m4a.sh
src/: asio_config.h.in  audio.h  audio_sdl.h  cast.h  command_line.h  config.h.in  emu.cpp  emu.h  lcd.cpp  lcd.h  lcd_sdl.h  main_frontend.cpp  math_util.h  mcu.cpp  mcu.h  mcu_opcodes.cpp  mcu_timer.cpp  mcu_timer.h  midi.h  midi_rtmidi.cpp  midi_win32.cpp  output_asio.cpp  output_asio.h  output_common.h  output_sdl.cpp  output_sdl.h  path_util.cpp  pcm.cpp  pcm.h  render_frontend.cpp  ringbuffer.h  smf.cpp  smf.h  submcu.cpp  submcu.h  wav.cpp  wav.h
src/backend/: bounded_ordered_bitset.h  c_api.cpp  cast.h  command_line.h  config.cpp  config.h.in  diagnostics.cpp  diagnostics.h  emu.cpp  emu.h  lcd.cpp  lcd.h  math_util.h  mcu.cpp  mcu.h  mcu_interrupt.cpp  mcu_interrupt.h  mcu_opcodes.cpp  mcu_opcodes.h  mcu_timer.cpp  mcu_timer.h  path_util.cpp  pcm.cpp  pcm.h  ringbuffer.h  rom_io.cpp  submcu.cpp
src/common/: command_line.h  gain.cpp  gain.h  path_util.cpp  path_util.h  rom_loader.cpp  rom_loader.h
src/renderer/: main.cpp  smf.cpp  smf.h  wav.cpp  wav.h
src/standard/: application.cpp  application.h  application_cli.cpp  audio_sdl.cpp  bounded_vector.h  instance.cpp  instance.h  lcd_sdl.cpp  main.cpp  midi.h  midi_rtmidi.cpp  midi_win32.cpp  output_asio.cpp  output_asio.h  output_common.cpp  output_common.h  output_sdl.cpp
test/: CMakeLists.txt  test_bitset.cpp  test_bounded_vector.cpp  test_gain.cpp  test_ringbuffer.cpp
test/integration/: CMakeLists.txt  test_runner.py
test/integration/issue_18/: issue_18.mid
test/integration/issue_42/: anacrusis.mid
test/integration/jv880/: jv880.mid
